<resources>
    <string name="app_name">Todo</string>
    <string name="action_settings">Settings</string>

    <!-- Font Size Arrays -->
    <string-array name="font_size_entries">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
    </string-array>
    <string-array name="font_size_values">
        <item>small</item>
        <item>medium</item>
        <item>large</item>
    </string-array>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

    <string name="add_todo">Add To-Do</string>
    <string name="action_reset">Reset App</string>
    <string name="todo_title">Todo Title</string>
    <string name="todo_description">Todo Description</string>
    <string name="todo_categories">Todo Categories</string>
    <string name="todo_status">Todo Status</string>
    <string name="todo_priority">Todo Priority</string>
    <string name="todo_startdate">Todo Startdate</string>
    <string name="todo_enddate">Todo Enddate</string>
    <string name="title_list">List View</string>
    <string name="title_add">Add View</string>
    <string name="title_character">Character View</string>
    <string name="character_image">Character Image</string>
    <string name="character_name_placeholder">John Doe</string>
    <string name="character_age_placeholder">25 years</string>
    <string name="strength">Strength</string>
    <string name="default_level">Level %d</string>
    <string name="perception">Perception</string>
    <string name="endurance">Endurance</string>
    <string name="charisma">Charisma</string>
    <string name="intelligence">Intelligence</string>
    <string name="agility">Agility</string>
    <string name="luck">Luck</string>
    <string name="text_title_detail">Title</string>
    <string name="checkBox_text_detail">Status</string>
    <string name="text_description_detail">Description</string>
    <string name="start_date_text_detail">Start Date</string>
    <string name="end_date_text_detail">End Date</string>
    <string name="button_save_detail">Save</string>
    <string name="button_delete_detail">Delete</string>
    <string name="character_gender_placeholder">Male</string>
    <string name="action_archive">Archive</string>
    <string name="back">Back</string>
    <string name="character_name_hint">Enter character name</string>
    <string name="next">Next</string>
    <string name="character_age_hint">Enter character age</string>
    <string name="character_gender_hint">Be creative … Or not.</string>
    <string name="finish">Finish</string>
    <string name="select_icon">Select a character icon.</string>
    <string name="action_reset_character">Reset Character</string>
    <string name="action_search">Search</string>
    <string name="action_filter">Filter</string>
    <string name="filter_by_priority">Filter by Priority</string>
    <string name="filter_by_category">Filter by Category</string>
    <string name="filter_reset">Reset your Filter</string>
    <string name="filter_by_start_date">Filter by Start Date</string>
    <string name="filter_by_end_date">Filter by End Date</string>
</resources>